			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01au: *********************************

IMP: (12/8/04, GVG) Layer visibilty stored in technology preferences (Bug #76)

BUG: (12/8/04, RK) NCC: When guessing which layout or schematic cell to compare against, always select the most recent version.

BUG: (12/8/04, GVG) DRC: polysilicon-select checking not working properly hierarchically (Bug# 66 and #15).
FIX: work on transformations.

IMP: (12/7/04, RK) NCC regression: added small test case to exercise transistor thresholds, oxide thickness, etc

IMP: (12/7/04, RK) NCC: Handle transistor thresholds, oxide thickness, etc

IMP: (12/7/04, SMR) Descending into an arrayed node now prompts for the specific node to enter (Bug #53).

************************* Version 8.01at: *********************************

IMP: (12/7/04, SMR) Spice files don't get read back properly.

IMP: (12/7/04, GVG) DRC: more caching functionality (tested in debug mode and now making it public)

IMP: (12/7/04, SMR) Assertion in Library.removeReferencedLib() is now just a warning (Bug #58).

IMP: (12/7/04, GVG) DRC: another place where generic arcs are found in layout.
     Same modification as the one inserted on 12/3/04

IMP: (12/7/04, SMR) Screen sizes are computed better on multi-display systems (Bug #48)

BUG: (12/7/04, SMR) Auto-stitcher may remove useful pins (Bug #59).
FIX: In AutoStitch.comparePoly(), only delete pins if they have no connections or exports.

IMP/MAN: (12/6/04, GVG) ERC: optimizing code (1)DRC check only available by request (not fully decomissioned yet
     until 100% sure about consequences) (2) caching information for arcs in HierarchyEnumerator Visitor.

IMP: (12/6/04, SMR) Screen sizes are computed better on multi-display systems (Bug #48).

BUG: (12/6/04, SMR) Conversin from layout to schematic is broken (Bug #56).
FIX: Fixed "ViewChanges.java" to work right.
