@@ -11,49 +11,6 @@ import com.sun.electric.database.variable.ElectricObject;
  * To change this template use File | Settings | File Templates.
  */
 public interface DRCRules {
-// 	/** key of Variable with width limit for wide rules. */
-// 	Variable.Key WIDE_LIMIT = ElectricObject.newKey("DRC_wide_limit");
-// 	/** key of Variable for minimum separation when connected. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES = ElectricObject.newKey("DRC_min_connected_distances");
-// 	/** key of Variable for minimum separation rule when connected. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES_RULE = ElectricObject.newKey("DRC_min_connected_distances_rule");
-// 	/** key of Variable for minimum separation when unconnected. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES = ElectricObject.newKey("DRC_min_unconnected_distances");
-// 	/** key of Variable for minimum separation rule when unconnected. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES_RULE = ElectricObject.newKey("DRC_min_unconnected_distances_rule");
-// 	/** key of Variable for minimum separation when connected and wide. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES_WIDE = ElectricObject.newKey("DRC_min_connected_distances_wide");
-// 	/** key of Variable for minimum separation rule when connected and wide. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES_WIDE_RULE = ElectricObject.newKey("DRC_min_connected_distances_wide_rule");
-// 	/** key of Variable for minimum separation when unconnected and wide. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES_WIDE = ElectricObject.newKey("DRC_min_unconnected_distances_wide");
-// 	/** key of Variable for minimum separation rule when unconnected and wide. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES_WIDE_RULE = ElectricObject.newKey("DRC_min_unconnected_distances_wide_rule");
-// 	/** key of Variable for minimum separation when connected and multicut. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES_MULTI = ElectricObject.newKey("DRC_min_connected_distances_multi");
-// 	/** key of Variable for minimum separation rule when connected and multicut. */
-// 	Variable.Key MIN_CONNECTED_DISTANCES_MULTI_RULE = ElectricObject.newKey("DRC_min_connected_distances_multi_rule");
-// 	/** key of Variable for minimum separation when unconnected and multicut. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES_MULTI = ElectricObject.newKey("DRC_min_unconnected_distances_multi");
-// 	/** key of Variable for minimum separation rule when unconnected and multicut. */
-// 	Variable.Key MIN_UNCONNECTED_DISTANCES_MULTI_RULE = ElectricObject.newKey("DRC_min_unconnected_distances_multi_rule");
-// 	/** key of Variable for minimum edge distance. */
-// 	Variable.Key MIN_EDGE_DISTANCES = ElectricObject.newKey("DRC_min_edge_distances");
-// 	/** key of Variable for minimum edge distance rule. */
-// 	Variable.Key MIN_EDGE_DISTANCES_RULE = ElectricObject.newKey("DRC_min_edge_distances_rule");
-// 	/** key of Variable for minimum layer width. */
-// 	Variable.Key MIN_WIDTH = ElectricObject.newKey("DRC_min_width");
-// 	/** key of Variable for minimum layer width rule. */
-// 	Variable.Key MIN_WIDTH_RULE = ElectricObject.newKey("DRC_min_width_rule");
-// 	/** key of Variable for minimum node size. */
-// 	Variable.Key MIN_NODE_SIZE = ElectricObject.newKey("DRC_min_node_size");
-// 	/** key of Variable for minimum node size rule. */
-// 	Variable.Key MIN_NODE_SIZE_RULE = ElectricObject.newKey("DRC_min_node_size_rule");
-
-	/** key of Variable for last valid DRC date on a Cell. */
-	Variable.Key LAST_GOOD_DRC = ElectricObject.newKey("DRC_last_good_drc");
-
-	//public int getNumLayers();
 	public void setMinNodeSize(int index, double value);
 	public double getWorstSpacingDistance();
     public double getMaxSurround(Technology tech, Layer layer, double maxSize);
