@@ -213,7 +213,8 @@ public class CellLists extends EDialog
 		if (maxlen < 0) line += "\t"; else line += " ";
 
 		boolean goodDRC = false;
-		Date lastGoodDate = DRC.getLastDRCDate(cell);
+        byte activeBits = DRC.getActiveBits();
+		Date lastGoodDate = DRC.getLastDRCDateBasedOnBits(cell, activeBits);
 		if (!Main.getDebug() && lastGoodDate != null && cell.getRevisionDate().before(lastGoodDate)) goodDRC = true;
 		if (goodDRC) line += "D"; else line += " ";
 		if (maxlen < 0) line += "\t"; else line += " ";
