@@ -4,6 +4,10 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.01au: *********************************
 
+IMP: (12/8/04, GVG) DRC good dates work with min area and coverage bits (Bug #?)
+
+IMP: (12/8/04, GVG) Save Library in ExplorerTree to avoid the setup as current library previous to the saving action.
+
 IMP: (12/8/04, GVG) Layer visibilty stored in technology preferences (Bug #76)
 
 BUG: (12/8/04, RK) NCC: When guessing which layout or schematic cell to compare against, always select the most recent version.
